Style.css
html,
body {
    height: 100%;
    margin: 0;
    padding: 0;

    /* Main background. */
    background-color: #141414;
    background-image: url(Images/Main/Background.png);
    background-repeat: repeat;
    /* End */

    /* Scrollbar design. */
    scrollbar-color: #424242 #262626;
    scrollbar-width: thin;
    /* End */

    /* Font design. */
    font-family: calibri;
    font-size: 14px;
    color: white;
    /* End */

    /* URL design. */
    a {
        color: white;
        font-weight: bold;
        text-decoration: none;
    }

    a:hover, a:focus {
        text-decoration: underline;
    }
}
/* End */

    /* List design. */
ul.list {
    list-style-image: url(Images/Main/Menu.png);
    text-align: left;
}

ul.list li {
    padding: 2px 0px;
}
/* End */



/* Top section - Banner and Navigation section. */
header {
    padding: 50px 0px;
    text-align: center;
}
/* End */

/* Middle section - Container that holds the PC Icons. */
main {
    float: right;
    width: 80%;
    margin-left: 2%;
    margin-right: 2%;
    margin-bottom: 2%;
}
/* End */

/* End section - Notes. */
footer {
    clear: both;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    bottom: 0;
    width: 100%;
    height: 70px;
    margin-top: 2%;
    padding: 1.5% 0%;
    background: #2b2f30;
    border-top: 1px solid black;
    text-align: center;
}

footer img.left {
    width: 16px;
    height: 16px;
    margin-right: 30px;
}

footer img.right {
    width: 16px;
    height: 16px;
    margin-left: 30px;
}
/* End */



/* Category - The black bar that is displayed above content boxes. */
div.head {
    background: black;
    font-weight: bold;
    text-align: center;
    border: 0;
}
/* End */

/* Content - The box that is displayed under the category name. */
div.body {
    margin-bottom: 2%;
    padding: 10px 0px;
    background: #222526;
    border: 1px solid black;
    border-top: 0;
    text-align: center;
}
/* End */

/* Mini Category - The grey bar that displays the PC Box Number. */
div.subtitle {
    width: 100px;
    margin-bottom: 5px;
    background: #0c0e0e;
    font-weight: bold;
    border: 1px solid black;
    border-left: 0;
}
/* End */

/* Quick Jump Menu.*/
nav.menu {
    float: left;
    position: fixed;
    width: 15%;
    margin-left: 1%;
    top: 10%;
    text-align: left;
}

nav.menu ul {
    margin: 0;
    padding: 10px 30px;
    background: #2b2f30;
    list-style-image: url(Images/Main/Menu.png);
    border: 1px solid black;
    border-top: 0;
    border-bottom: 0;
}

nav.menu ul:last-child {
    border-bottom: 1px solid black;
}

nav.menu li {
    padding: 2px 2px 2px 0;
}
/* End */

/* Progress Bar Display */
progress {
    height: 6px;
    width: 100%;
    background-color: #D4D4D4;
    border: 1px solid black;
    margin-bottom: 8px;
}

progress::-moz-progress-bar {
    background-color: #2A9200;
}

/* Firefox */
progress::-webkit-progress-bar {
    height: 6px;
    width: 100%;
    background-color: #D4D4D4;
    border-bottom: 1px solid black;
}

/* Edge/Chrome */
progress::-webkit-progress-value {
    background-color: #2A9200;
}
/* End */


/* Search Bar display */
nav.menu div.search {
    margin: 0;
    padding: 10px 30px;
    background: #2b2f30;
    border: 1px solid black;
    border-top: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

p.searchInfo {
    font-size: smaller;
    text-align: center;
    margin: 1ch 0 0;
    width: 100%;
}

/* End */


/* PC Box Icon opacity */
img.own {
    opacity: 1.0;
}

img.notown {
    opacity: 0.3;
}

img.notown:hover {
    opacity: 1.0;
} /* Opacity still 0.3 when focused to provide a visual difference when searching. */
/* End */

/* PC Box Info - Displays when hovering over Icons */
div.pkmn:hover,
div.pkmn:focus-within {
    -webkit-box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.59);
    box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.59);
}

div.pkmn {
    display: inline-block;
    position: relative;
}

div.pkmn span.info, div.pkmn span.info-expand {
    visibility: hidden;
    width: 170px;
    padding: 4px 0;
    background-color: rgb(31, 31, 31);
    border: 1px solid black;
    text-align: center;
    position: absolute;
    z-index: 1;
    bottom: 110%;
    left: 50%;
    margin-left: -50px;
}

div.pkmn span.info-expand {
    width: 260px;
}

div.pkmn:hover span.info, div.pkmn:hover span.info-expand,
div.pkmn:focus-within span.info, div.pkmn:focus-within span.info-expand {
    visibility: visible;
}

span.info p, span.info-expand p {
    margin: 0;
    padding-bottom: 4px;
    font-weight: bold;
}

span.info p.form, span.info-expand p.form {
    margin: 0;
    padding-bottom: 4px;
    font-style: italic;
    font-weight: 100;
}
/* End */

/* Icons for genders differences. */
div.male,
div.female {
    max-width: 7px;
    min-height: 10px;
    margin-bottom: 4px;
    padding: 0% 50%;
    background-repeat: no-repeat;
    background-position: center;
}

div.male {
    background-image: url(Images/Pokémon-Info/Male.png);
}

div.female {
    background-image: url(Images/Pokémon-Info/Female.png);
}
/* End */

/* Icons for types.*/
div.normal,
div.fighting,
div.flying,
div.poison,
div.ground,
div.rock,
div.bug,
div.ghost,
div.steel,
div.fire,
div.water,
div.grass,
div.electric,
div.psychic,
div.ice,
div.dragon,
div.dark,
div.fairy,
div.bird {
    display: inline;
    max-width: 32px;
    min-height: 12px;
    padding: 0px 20%;
    background-repeat: no-repeat;
    background-position: center;
}

div.normal {
    background-image: url(Images/Pokémon-Info/Normal.png);
}

div.fighting {
    background-image: url(Images/Pokémon-Info/Fighting.png);
}

div.flying {
    background-image: url(Images/Pokémon-Info/Flying.png);
}

div.poison {
    background-image: url(Images/Pokémon-Info/Poison.png);
}

div.ground {
    background-image: url(Images/Pokémon-Info/Ground.png);
}

div.rock {
    background-image: url(Images/Pokémon-Info/Rock.png);
}

div.bug {
    background-image: url(Images/Pokémon-Info/Bug.png);
}

div.ghost {
    background-image: url(Images/Pokémon-Info/Ghost.png);
}

div.steel {
    background-image: url(Images/Pokémon-Info/Steel.png);
}

div.fire {
    background-image: url(Images/Pokémon-Info/Fire.png);
}

div.water {
    background-image: url(Images/Pokémon-Info/Water.png);
}

div.grass {
    background-image: url(Images/Pokémon-Info/Grass.png);
}

div.electric {
    background-image: url(Images/Pokémon-Info/Electric.png);
}

div.psychic {
    background-image: url(Images/Pokémon-Info/Psychic.png);
}

div.ice {
    background-image: url(Images/Pokémon-Info/Ice.png);
}

div.dragon {
    background-image: url(Images/Pokémon-Info/Dragon.png);
}

div.dark {
    background-image: url(Images/Pokémon-Info/Dark.png);
}

div.fairy {
    background-image: url(Images/Pokémon-Info/Fairy.png);
}

div.bird {
    background-image: url(Images/Pokémon-Info/Bird.png);
}
/* End */





/* Below CSS is for the"Getting Started" HTML page. Feel free to ignore this. */
div.head-small {
    margin: auto;
    width: 90%;
    background: black;
    font-weight: bold;
    text-align: center;
    border: 1px solid black;
}

div.body-small {
    margin: auto;
    width: 90%;
    margin-bottom: 2%;
    padding: 10px 0px;
    background: #2b2f30;
    border: 1px solid black;
    border-top: 0;
    text-align: center;
}

details {
    margin: auto;
    margin-bottom: 2%;
    text-align: center;
}

summary {
    margin: auto;
    width: 90%;
    background: black;
    border: 1px solid black;
    border-top: 0px;
    border-bottom: 0px;
    font-weight: bold;
    text-align: center;
    color: white;
}

a.download {
    font-size: large;
    text-decoration: underline;
}

p.GS {
    font-weight: bolder;
    padding: 0px 50px;
}

ul.GS,
ul.GS2 {
    margin: 0%;
    padding: 0%;
    list-style: none;
}

ul.GS li {
    padding: 3px 0px;
    font-weight: bolder;
    margin-bottom: 1px;
}

ul.GS li::before,
ul.GS2 li::before {
    content: "»";
    padding-right: 5px;
}

ul.GS p {
    margin: 0px;
    padding: 0px 70px 20px;
    padding-bottom: 20px;
    font-style: italic;
}

ul.GS2 li {
    padding: 3px 100px;
    font-weight: lighter;
    margin-bottom: 7px;
}

img.GS {
    border: 1px solid black;
    width: 95%;
}

img.GS2 {
    border: 1px solid black;
    width: 60%;
}

img.GS3 {
    border: 1px solid black;
    width: 20%;
}

img.GS4 {
    padding-left: 10px;
    padding-bottom: 10px;
}
/* End */

